--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizzaria NP</title>
     <link rel="stylesheet" href="estilos/style.css">
-    <link rel="stylesheet" href="https://csnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=chat" />
 </head>
 <body>
     <header id="home">
-        <h1 id="home">Pizzaria NP</h1>
+        <h1 id="home1">Pizzaria NP</h1>
         <h3 class="home">A melhor pizzaria do bairro!</h3>
 
         <nav id="menu">
@@ -99,7 +99,10 @@
         </div>
     </section>    
 
-    <a class="botao-whatsapp" href="https://wa.me//5511946298202?text=Olá, eu gostaria de fazer um pedido." target="_blank">
+    <a class="botao-whatsapp" href="https://wa.me/5511946298202?text=Ol%C3%A1,%20gostaria%20de%20fazer%20um%20pedido." target="_blank">
+        <span class="material-symbols-outlined">
+            chat
+        </span>
     </a>
 
     <br>
